EditProject.aspx - Added Async propety to page . Default.css - Updated grid header css to implement standard vertical align and padding . GridViewExportUtil.cs - Cleaned up code . Site.Master - Added json2.min.js for browsers that don't implement JSON on the window as well IE quirks mode . DisplayIssues.ascx - Impemented HorizontalAlign for all th/td cells for standard alignment . DisplayIssues.ascx.cs - Impemented solution to download entire issue list when export is clicked

--- a/src/BugNET_WAP/App_Themes/Default/Default.css
+++ b/src/BugNET_WAP/App_Themes/Default/Default.css
@@ -821,6 +821,7 @@ div.welcomemessage ul
 {
 	padding: 4px;
 	display: table-cell;
+	vertical-align: top
 }
 .grid tr
 {
@@ -835,7 +836,8 @@ div.welcomemessage ul
 }
 .gridHeader th
 {
-	padding: 0 8px 0 8px;
+	padding: 4px;
+    vertical-align: text-bottom;
 	white-space: nowrap;
 }
 .gridHeader a
